[tool.poetry]
name = "lark-escaping"
version = "0.1.0"
description = ""
authors = ["Andrei & Copilot"]

[tool.poetry.dependencies]
python = "^3.8"
lark = "^1.1.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
